--- a/web/index.html
+++ b/web/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>sayu</title>
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <title>sayu</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
-    <h1>sayu</h1>
-    <p>sayu</p>
+  <header></header>
+  <main>
+  </main>
 </body>
 </html>
